<?xml version="1.0"?>
<package>
  <name>xml_reflection</name>
  <version>0.1.0</version>
  <description>

Reflection a la SDF from Gazebo.

  </description>
  <author email="eacousineau@gmail.com">Eric Cousineau</author>
  <maintainer email="eacousineau@gmail.com">Eric Cousineau</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/xml_reflection</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
</package>
